# AI-Flow-Detecting

./: .gitignore  README.md  docker-compose.yml
ai-core/: .gitignore  README.md  Yolo_Model_Helps.ipynb  data.yaml  flow-detecti.ipynb  flow-detecting.ipynb  flow-detecting_learn.ipynb  flow-detecting_learn_final.ipynb  inference.ipynb  requirements.txt  testcuda.ipynb
ai-core/config/: testcuda.ipynb
ai-core/dataset/: train_split.cache  val_split.cache
ai-core/dataset/images/: 20250809_164018.txt  20250809_164028.txt  20250809_164058.txt  20250809_164429.txt  20250809_164620.txt  20250810_110510.txt  20250810_110524.txt  20250810_110534.txt  20250810_110748.txt  20250810_110837.txt  20250810_110847.txt  20250810_110849.txt  (+21 more)
ai-core/learn/: Baby_mom.py  YOLO_MODEL_HELP.ipynb  images_get.ipynb  model.ipynb
ai-core/model/: Yolo_Model_Helps.ipynb  human_detection.ipynb
ai-core/object-tracker/: get_points.py  object-tracker-multiple.ipynb
backend-core/flowdetect/: Dockerfile  compose.yaml  pom.xml
infra/: docker-compose.yml
video-stream-service/: .env.sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  loggin_config.py  main.py  pyproject.toml  startup_video_capture.py
video-stream-service/clients/: flow_detect_client.py  schemas.py
web-client/: Dockerfile  README.md  db.json  index.html  package-lock.json  package.json  vite.config.ts
web-client/src/: App.css  App.tsx  BusStop.tsx  GetMarkes.ts  HlsPlayer.tsx  MapComponent.css  PopupContent.tsx  header.tsx  map.tsx
web-client/web-app/: db.json  package-lock.json  package.json
(+287 files in other folders)
