[project]
name = "video-stream-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3-stubs[full]>=1.40.5",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.1.1",
    "ultralytics>=8.3.176",
]
